# asynchronous-task-management-service

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: Dockerfile  depends.py  example.env  main.py  pyproject.toml  settings.py
src/engines/: __init__.py  postgres_storage.py  rabbitmq_storage.py
src/enums/: __init__.py  producer.py  tasks.py
src/migrations/: env.py
src/models/: __init__.py  base.py  tasks.py
src/repositories/: __init__.py  base.py  tasks.py
src/routers/: __init__.py  tasks.py
src/schemes/: __init__.py  base.py  tasks.py
src/schemes/types/: tasks.py
src/services/: __init__.py  tasks.py
src/tests/integration/: conftest.py
src/tests/integration/routers/: test_tasks.py
src/tests/unit/: conftest.py
src/tests/unit/repositories/: test_tasks.py
src/tests/unit/services/: test_tasks.py
workers/: Dockerfile  main.py  pyproject.toml  settings.py
workers/engines/: __init__.py  rabbitmq_storage.py
workers/enums/: __init__.py  producer.py  tasks.py
workers/models/: __init__.py  base.py
workers/repositories/: __init__.py  base.py  tasks.py
workers/services/: __init__.py  base.py  consumer.py
