[tool.poetry]
name = "asynchronous-task-management-service"
version = "0.1.0"
description = ""
authors = ["FOURWORDSALLCAPS"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
aio-pika = "^9.5.7"
asyncpg = "^0.30.0"
alembic = "^1.17.2"
rodi = "^2.0.6"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.43" }
uvicorn = { extras = ["standard"], version = "^0.29.0" }
fastapi = { extras = ["all"], version = "^0.110.2" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
