[tool.poetry]
name = "asynchronous-task-management-service"
version = "0.1.0"
description = ""
authors = ["FOURWORDSALLCAPS"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
aio-pika = "^9.5.7"
asyncpg = "^0.30.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
numpy = "^2.3.5"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.43" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
